--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <div>
                     <h2>个人资料</h2>
                     <p>姓　　名：王军</p>
-                    <p>性　　别：男<span>年龄：23</span></p>
+                    <p>性　　别：男<span style="margin-left:10px;">年龄：23</span></p>
                     <p>籍　　贯：山东省临沂市</p>
                     <p>民　　族：汉族</p>
                     <p>政治面貌：共青团员</p>
@@ -140,5 +140,6 @@
 	</ul>
     <script type="text/javascript" src="js/tagcloud.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
+    <p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254110219'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254110219%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
 </body>
 </html>
