--- a/index.html
+++ b/index.html
@@ -1,71 +1,145 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Jianli by yuxuangezhu</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Jianli</h1>
-        <p>个人简历</p>
-
-        <p class="view"><a href="https://github.com/yuxuangezhu/jianli">View the Project on GitHub <small>yuxuangezhu/jianli</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/yuxuangezhu/jianli/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/yuxuangezhu/jianli/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/yuxuangezhu/jianli">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/yuxuangezhu">yuxuangezhu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+<head>
+	<meta charset="utf-8">
+    <base target="_blank">  
+		<title>个人简历</title>
+    <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
+    <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/common.css">
+    <style></style>
+    <script type="text/javascript"></script>
+</head>
+<body>
+<div class="body">
+	<section class="section" style="background-image: url(images/banner-one.jpg);">
+        <div class="page-one">
+            <p class="page-one-bar">一个前端的个人简历</p>
+            <p>崇尚自由，脚踏实地。</p>
+            <p>爱好广阔的网络世界，又喜欢严谨不苟的代码生涯。</p>
+            <p>从小就是一个喜欢技术的孩子，初中开始写过第一个网页;</p>
+            <p>大学开始学习web前端技术;</p>
+            <p>三年来做了大大小小数十个网站，做过站长、写过应用。</p>
+            <p>对前端一片热爱！</p>
+            <p class="welcome"><a href="javascript:void(0)">欢迎进入我的世界</a></p>
+        </div>
+	</section>
+	<section class="section" style="background-color:#24313d;">
+        <p class="ability">这些是我会的</p>
+        <div class="page-two-left">
+            <p>1、热爱前端工作，具有良好团队合作精神，有责任心与学习能力；</p>
+            <p>2、熟悉Web标准，熟悉HTML，JavaScript，CSS等技术，熟悉页面架构和DIV+CSS布局；</p>
+            <p>3、能够手写代码、运用CSS、JS构建动态网页，实际动手做过网站；</p>
+            <p>4、熟悉针对主流浏览器的代码兼容优化；</p>
+            <p>5、计算机相关专业大四学生。</p>
+        </div>
+  		<div id="tagsList">
+        <span><a href="#">熟悉HTML</a></span>
+        <span><a href="#">熟悉CSS</a></span>
+        <span><a href="#">熟悉javascript</a></span>
+        <span><a href="#">了解php</a></span>
+        <span><a href="#">了解websocket</a></span>
+        <!-- <span><a href="#">了解fis</a></span> -->
+        <span><a href="#">熟悉html5</a></span>
+        </div>
+	</section>
+	<section class="section" style="background-color:#062B4D;">
+  		<p class="ability">这些是我做过的项目</p>
+        <div class="page-three-body">
+            <ul>
+                <li><img src="images/xsw.png"></li>
+                <li><img src="images/dag.png"></li>
+                <li><img src="images/stbk.png"></li>
+                <li><img src="images/sheng.png"></li>
+                <li><img src="images/jiang.png"></li>
+                <li><img src="images/sjc.png"></li>
+            </ul>
+        </div>
+	</section>
+	<section class="section" style="background-color:#383E47;">
+  		<p class="ability">这些是我实习的经历</p>
+        <div class="page-four-body">
+            <div class="page-four-top">
+                <ul>
+                    <li>
+                        <p>2012-6 至 2014-6</p>
+                        <p>鲁大学生网</p>
+                        <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
+                    </li>
+                    <li>
+                        <p>2014-6 至 今</p>
+                        <p>烟台骨头科技</p>
+                        <p>骨头科技为我与校内几个爱好web技术的同学共同建立的网络工作室，主要承接外部网站项目建设与运营，目前完成有“杭州市江干区卫生监督所”项目。</p>
+                    </li>
+                </ul>
+            </div>
+            <span style="margin-left:0px;">2011</span>
+            <span style="margin-left:5%;">2012</span>
+            <span style="margin-left:6%;">2013</span>
+            <span style="margin-left:32%;">2014</span>
+            <span style="margin-left:35%;">2015</span>
+            <hr/>
+            <div class="page-four-bottom">
+                <ul>
+                    <li>
+                        <p>2013-1 至 2013-5</p>
+                        <p>山东好客传媒广告有限公司</p>
+                        <p>参与山东好客传媒广告有限公司好客山东旅游网设计与建设，web前端页面效果实现，网站顺利上线</p>
+                    </li>
+                    <li>
+                        <p>2014-11 至 今</p>
+                        <p>北京宜宅科技有限责任公司</p>
+                        <p>负责世纪生活网APP页面效果实现</p>
+                    </li>
+                </ul>
+            </div>
+        </div>
+	</section>
+	<section class="section" style="background-color:#766823;">
+  		<p class="ability">这些是我的个人信息</p>
+        <div class="page-five-body">
+            <div class="page-five-left">
+                <div>
+                    <h2>联系方式</h2>
+                    <p>邮　　箱：714756603@qq.com</p>
+                    <p>手　　机：17600878121</p>
+                    <p>Q　　Q：714756603</p>
+                    <p>微　　博：@宇轩阁主人</p>
+                    <P>Github：@yuxuangezhu</P>
+                    <p>个人网站：http://ldsnwangjun.cn</p>
+                    <p><a href="images/down.pdf">如需文档简历请点击下载</a></p>
+                </div>
+                <div>
+                    <h2>个人资料</h2>
+                    <p>姓　　名：王军</p>
+                    <p>性　　别：男<span style="margin-left:10px;">年龄：23</span></p>
+                    <p>籍　　贯：山东省临沂市</p>
+                    <p>民　　族：汉族</p>
+                    <p>政治面貌：共青团员</p>
+                    <p>学　　历：本科</p>
+                    <p>毕业时间：2015.7</p>
+                </div>
+                <div class="aboutme">
+                    <h2>关于我</h2>
+                    <p>前端菜鸟程序猿一只</p>
+                    <p>水平有限，页面代码写的有点仓促，访问不舒服的地方，请攻城狮批评指教</p>
+                </div>
+            </div>   
+            <div class="page-five-right"></div>  
+        </div>
+        <p style="text-align; color:#fff;">如需本页面源代码请访问Github：@yuxuangezhu获取</p>
+	</section>
+</div>
+        <a href="javascript:void(0)" id="down-bth"></a>
+	<ul id="bth">
+        <li><a href="javascript:void(0);"></a></li>
+        <li><a href="javascript:void(0);"></a></li>
+        <li><a href="javascript:void(0);"></a></li>
+        <li><a href="javascript:void(0);"></a></li>
+        <li><a href="javascript:void(0);"></a></li>
+	</ul>
+    <script type="text/javascript" src="js/tagcloud.js"></script>
+    <script type="text/javascript" src="js/common.js"></script>
+    <p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5386413'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5386413%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
+</body>
 </html>
