--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
 	</ul>
     <script type="text/javascript" src="js/tagcloud.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
-    <p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_5386413'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s9.cnzz.com/stat.php%3Fid%3D5386413%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
+    <p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254114059'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254114059%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
 </body>
 </html>
