--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
     <base target="_blank">  
 		<title>个人简历</title>
     <script type="text/javascript" src="js/jquery-1.11.2.min.js"></script>
     <script type="text/javascript" src="js/jquery.mousewheel.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/common.css">
-    <style></style>
     <script type="text/javascript"></script>
 </head>
 <body>
