--- a/index.html
+++ b/index.html
@@ -73,12 +73,14 @@
                     </li>
                 </ul>
             </div>
-            <span style="margin-left:0px;">2011</span>
-            <span style="margin-left:5%;">2012</span>
-            <span style="margin-left:6%;">2013</span>
-            <span style="margin-left:32%;">2014</span>
-            <span style="margin-left:35%;">2015</span>
-            <hr/>
+            <div>
+                <span style="margin-left:2%;">2011</span>
+                <span style="margin-left:5%;">2012</span>
+                <span style="margin-left:6%;">2013</span>
+                <span style="margin-left:30%;">2014</span>
+                <span style="margin-left:30%;">2015</span>
+                <hr/>
+            </div>
             <div class="page-four-bottom">
                 <ul>
                     <li>
