--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </li>
                 </ul>
             </div>
-            <div>
+            <div class="hr">
                 <span style="margin-left:2%;">2011</span>
                 <span style="margin-left:5%;">2012</span>
                 <span style="margin-left:6%;">2013</span>
