--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <p>鲁大学生网</p>
                         <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
                     </li>
-                    <li>
+                    <li style="margin-right:3%;">
                         <p>2014-6 至 今</p>
                         <p>烟台骨头科技</p>
                         <p>骨头科技为我与校内几个爱好web技术的同学共同建立的网络工作室，主要承接外部网站项目建设与运营，目前完成有“杭州市江干区卫生监督所”项目。</p>
@@ -74,7 +74,7 @@
                 </ul>
             </div>
             <div class="hr">
-                <span style="margin-left:2%;">2011</span>
+                <span style="margin-left:0px;">2011</span>
                 <span style="margin-left:5%;">2012</span>
                 <span style="margin-left:6%;">2013</span>
                 <span style="margin-left:30%;">2014</span>
