--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
                         <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
                     </li>
                     <li>
-                        <p>2014-11 至 今</p>
-                        <p>北京宜宅科技有限责任公司</p>
-                        <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
+                        <p>2014-01 至 今</p>
+                        <p>新浪微博</p>
+                        <p>负责微博主站前端研发，研究微博多模块加载</p>
                     </li>
                 </ul>
             </div>
