--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                         <p>参与山东好客传媒广告有限公司好客山东旅游网设计与建设，web前端页面效果实现，网站顺利上线</p>
                     </li>
                     <li>
-                        <p>2014-11 至 今</p>
-                        <p>北京宜宅科技有限责任公司</p>
-                        <p>负责世纪生活网APP页面效果实现</p>
+                        <p>2014-01 至 今</p>
+                        <p>新浪微博</p>
+                        <p>负责微博主站前端研发，研究微博多模块加载</p>
                     </li>
                 </ul>
             </div>
