--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
             <p>大学开始学习web前端技术;</p>
             <p>三年来做了大大小小数十个网站，做过站长、写过应用。</p>
             <p>对前端一片热爱！</p>
-            <p class="welcome"><a href="javascript:void(0)">欢迎进入我的世界</a></p>
+            <p class="welcome"><a href="javascript:;">欢迎进入我的世界</a></p>
         </div>
 	</section>
 	<section class="section" style="background-color:#24313d;">
-        <p class="ability">这些是我会的</p>
+        <p class="ability">我会的</p>
         <div class="page-two-left">
             <p>1、热爱前端工作，具有良好团队合作精神，有责任心与学习能力；</p>
-            <p>2、熟悉Web标准，熟悉HTML，JavaScript，CSS等技术，熟悉页面架构和DIV+CSS布局；</p>
+            <p>2、熟悉Web标准、HTML，JavaScript，CSS等技术，熟悉页面架构和DIV+CSS布局；</p>
             <p>3、能够手写代码、运用CSS、JS构建动态网页，实际动手做过网站；</p>
             <p>4、熟悉针对主流浏览器的代码兼容优化；</p>
-            <p>5、计算机相关专业大四学生。</p>
+            <p>5、计算机相关专业。</p>
         </div>
   		<div id="tagsList">
         <span><a href="#">熟悉HTML</a></span>
@@ -39,12 +39,12 @@
         <span><a href="#">熟悉javascript</a></span>
         <span><a href="#">了解php</a></span>
         <span><a href="#">了解websocket</a></span>
-        <!-- <span><a href="#">了解fis</a></span> -->
+        <span><a href="#">了解photoshop</a></span>
         <span><a href="#">熟悉html5</a></span>
         </div>
 	</section>
 	<section class="section" style="background-color:#062B4D;">
-  		<p class="ability">这些是我做过的项目</p>
+  		<p class="ability">我做过的项目</p>
         <div class="page-three-body">
             <ul>
                 <li><img src="images/xsw.png"></li>
@@ -57,7 +57,7 @@
         </div>
 	</section>
 	<section class="section" style="background-color:#383E47;">
-  		<p class="ability">这些是我实习的经历</p>
+  		<p class="ability">我工作的经历</p>
         <div class="page-four-body">
             <div class="page-four-top">
                 <ul>
@@ -67,36 +67,38 @@
                         <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
                     </li>
                     <li>
-                        <p>2014-6 至 今</p>
-                        <p>烟台骨头科技</p>
-                        <p>骨头科技为我与校内几个爱好web技术的同学共同建立的网络工作室，主要承接外部网站项目建设与运营，目前完成有“杭州市江干区卫生监督所”项目。</p>
+                        <p>2015-01 至 2015-05</p>
+                        <p>新浪微博</p>
+                        <p>负责微博主站前端研发，研究微博多模块加载</p>
                     </li>
                 </ul>
             </div>
-            <span style="margin-left:0px;">2011</span>
+            <!-- <span style="margin-left:0px;">2012</span>
             <span style="margin-left:5%;">2012</span>
             <span style="margin-left:6%;">2013</span>
             <span style="margin-left:32%;">2014</span>
-            <span style="margin-left:35%;">2015</span>
+            <span style="margin-left:35%;">2015</span> -->
             <hr/>
             <div class="page-four-bottom">
                 <ul>
                     <li>
-                        <p>2013-1 至 2013-5</p>
-                        <p>山东好客传媒广告有限公司</p>
-                        <p>担任鲁东大学鲁大学生网网络部部长，主要负责组织建设与维护鲁大学生网主站及其附属网站，承担外部网站建设任务</p>
+                        <p>2014-6 至 2015-1</p>
+                        <p>烟台骨头科技</p>
+                        <p>骨头科技为我与校内几个爱好web技术的同学共同建立的网络工作室，主要承接外部网站项目建设与运营，目前完成有“杭州市江干区卫生监督所”项目。</p>
                     </li>
                     <li>
-                        <p>2014-01 至 今</p>
-                        <p>新浪微博</p>
-                        <p>负责微博主站前端研发，研究微博多模块加载</p>
+                        <p>2015-05 至 今</p>
+                        <p>爱奇艺</p>
+                        <p>1、负责爱奇艺pc客户端 Mac客户端内嵌页开发<br>
+                        2、负责h5活动相关页面开发<br>
+                        3、负责内部活动管理平台开发重构</p>
                     </li>
                 </ul>
             </div>
         </div>
 	</section>
 	<section class="section" style="background-color:#766823;">
-  		<p class="ability">这些是我的个人信息</p>
+  		<p class="ability">我的个人信息</p>
         <div class="page-five-body">
             <div class="page-five-left">
                 <div>
@@ -117,12 +119,11 @@
                     <p>民　　族：汉族</p>
                     <p>政治面貌：共青团员</p>
                     <p>学　　历：本科</p>
-                    <p>毕业时间：2015.7</p>
                 </div>
                 <div class="aboutme">
                     <h2>关于我</h2>
-                    <p>前端菜鸟程序猿一只</p>
-                    <p>水平有限，页面代码写的有点仓促，访问不舒服的地方，请攻城狮批评指教</p>
+                    <p>前端程序猿一只</p>
+                    <p>爱好广阔的网络世界，又喜欢严谨不苟的代码生涯。</p>
                 </div>
             </div>   
             <div class="page-five-right"></div>  
@@ -130,16 +131,16 @@
         <p style="text-align; color:#fff;">如需本页面源代码请访问Github：@yuxuangezhu获取</p>
 	</section>
 </div>
-        <a href="javascript:void(0)" id="down-bth"></a>
-	<ul id="bth">
-        <li><a href="javascript:void(0);"></a></li>
-        <li><a href="javascript:void(0);"></a></li>
-        <li><a href="javascript:void(0);"></a></li>
-        <li><a href="javascript:void(0);"></a></li>
-        <li><a href="javascript:void(0);"></a></li>
-	</ul>
-    <script type="text/javascript" src="js/tagcloud.js"></script>
-    <script type="text/javascript" src="js/common.js"></script>
-    <p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254110219'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254110219%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
+<a href="javascript:;" id="down-bth"></a>
+<ul id="bth">
+    <li><a href="javascript:;"></a></li>
+    <li><a href="javascript:;"></a></li>
+    <li><a href="javascript:;"></a></li>
+    <li><a href="javascript:;"></a></li>
+    <li><a href="javascript:;"></a></li>
+</ul>
+<script type="text/javascript" src="js/tagcloud.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
+<p style="display:none;"><script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1254110219'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s11.cnzz.com/stat.php%3Fid%3D1254110219%26show%3Dpic' type='text/javascript'%3E%3C/script%3E"));</script></p>
 </body>
 </html>
